--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "antd": "^4.7.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
     "react": "^16.13.1",
+    "react-app-rewire-css-modules": "^1.0.0",
+    "react-app-rewired": "2.0.2-next.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -35,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewire-less-modules": "^1.3.0"
   }
 }
