--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.6",
     "antd": "^4.7.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
@@ -17,6 +19,8 @@
     "react-app-rewire-css-modules": "^1.0.0",
     "react-app-rewired": "2.0.2-next.0",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.2"
   },
