--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
     "antd": "^4.7.0",
+    "axios": "^0.20.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
     "react": "^16.13.1",
