--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/echarts": "^4.8.3",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -14,6 +15,7 @@
     "@types/react-router-dom": "^5.1.6",
     "antd": "^4.7.0",
     "axios": "^0.20.0",
+    "echarts": "^4.9.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
     "react": "^16.13.1",
