--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.12.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -11,10 +12,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/redux-thunk": "^2.1.0",
     "antd": "^4.7.0",
     "axios": "^0.20.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "echarts": "^4.9.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
@@ -22,9 +26,12 @@
     "react-app-rewire-css-modules": "^1.0.0",
     "react-app-rewired": "2.0.2-next.0",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-thunk": "^1.0.0",
+    "redux": "^4.0.5",
     "three": "^0.121.1",
     "three-orbitcontrols": "^2.110.3",
     "typescript": "~3.7.2"
